--- a/ConditionPlots.ipynb
+++ b/ConditionPlots.ipynb
@@ -6,7 +6,29 @@
    "id": "36256f4d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Scatter -- Year built vs Condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc446f3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Box plot by condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7979800f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scatter -- ADT vs Load rating by condition"
+   ]
   }
  ],
  "metadata": {
