Added lineplot for condition plot

--- a/ConditionPlots.ipynb
+++ b/ConditionPlots.ipynb
@@ -2,12 +2,252 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "ec9dcb27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\mikbo\\AppData\\Local\\Temp\\ipykernel_2160\\914043310.py:5: DtypeWarning: Columns (99) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(\"datasets/NTAD_National_Bridge_Inventory_2178055625219331056.csv\")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>STATE_CODE_001</th>\n",
+       "      <th>STRUCTURE_NUMBER_008</th>\n",
+       "      <th>RECORD_TYPE_005A</th>\n",
+       "      <th>ROUTE_PREFIX_005B</th>\n",
+       "      <th>SERVICE_LEVEL_005C</th>\n",
+       "      <th>ROUTE_NUMBER_005D</th>\n",
+       "      <th>DIRECTION_005E</th>\n",
+       "      <th>HIGHWAY_DISTRICT_002</th>\n",
+       "      <th>COUNTY_CODE_003</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SUBMITTED_BY</th>\n",
+       "      <th>BRIDGE_CONDITION</th>\n",
+       "      <th>LOWEST_RATING</th>\n",
+       "      <th>DECK_AREA</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>LATDD</th>\n",
+       "      <th>LONGDD</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>290899</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00006</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>F</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1755.60</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>1202</td>\n",
+       "      <td>39.776933</td>\n",
+       "      <td>-94.793517</td>\n",
+       "      <td>-94.793517</td>\n",
+       "      <td>39.776933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>290900</td>\n",
+       "      <td>29</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00036</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5</td>\n",
+       "      <td>158.08</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>1202</td>\n",
+       "      <td>39.735267</td>\n",
+       "      <td>-93.940350</td>\n",
+       "      <td>-93.940350</td>\n",
+       "      <td>39.735267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>290901</td>\n",
+       "      <td>29</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00029</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>165</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>P</td>\n",
+       "      <td>4</td>\n",
+       "      <td>225.06</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>303</td>\n",
+       "      <td>39.466333</td>\n",
+       "      <td>-94.787725</td>\n",
+       "      <td>-94.787725</td>\n",
+       "      <td>39.466333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>290902</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00060</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>77</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1938.44</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>303</td>\n",
+       "      <td>37.124864</td>\n",
+       "      <td>-93.226503</td>\n",
+       "      <td>-93.226503</td>\n",
+       "      <td>37.124864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>290903</td>\n",
+       "      <td>29</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>00076</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>67</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>F</td>\n",
+       "      <td>5</td>\n",
+       "      <td>111.60</td>\n",
+       "      <td>AM</td>\n",
+       "      <td>1202</td>\n",
+       "      <td>36.972156</td>\n",
+       "      <td>-92.429808</td>\n",
+       "      <td>-92.429808</td>\n",
+       "      <td>36.972156</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 130 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   OBJECTID  STATE_CODE_001  STRUCTURE_NUMBER_008  RECORD_TYPE_005A  \\\n",
+       "0    290899              29                     1                 1   \n",
+       "1    290900              29                    10                 1   \n",
+       "2    290901              29                   100                 1   \n",
+       "3    290902              29                  1000                 1   \n",
+       "4    290903              29                 10000                 1   \n",
+       "\n",
+       "   ROUTE_PREFIX_005B  SERVICE_LEVEL_005C ROUTE_NUMBER_005D  DIRECTION_005E  \\\n",
+       "0                  3                   1             00006               0   \n",
+       "1                  2                   1             00036               0   \n",
+       "2                  1                   1             00029               0   \n",
+       "3                  2                   1             00060               0   \n",
+       "4                  3                   1             00076               0   \n",
+       "\n",
+       "   HIGHWAY_DISTRICT_002  COUNTY_CODE_003  ...  SUBMITTED_BY BRIDGE_CONDITION  \\\n",
+       "0                     1               21  ...            29                F   \n",
+       "1                     1               25  ...            29                F   \n",
+       "2                     3              165  ...            29                P   \n",
+       "3                     6               77  ...            29                F   \n",
+       "4                     7               67  ...            29                F   \n",
+       "\n",
+       "   LOWEST_RATING DECK_AREA STATUS  DATE      LATDD     LONGDD          x  \\\n",
+       "0              6   1755.60     AM  1202  39.776933 -94.793517 -94.793517   \n",
+       "1              5    158.08     AM  1202  39.735267 -93.940350 -93.940350   \n",
+       "2              4    225.06     AM   303  39.466333 -94.787725 -94.787725   \n",
+       "3              5   1938.44     AM   303  37.124864 -93.226503 -93.226503   \n",
+       "4              5    111.60     AM  1202  36.972156 -92.429808 -92.429808   \n",
+       "\n",
+       "           y  \n",
+       "0  39.776933  \n",
+       "1  39.735267  \n",
+       "2  39.466333  \n",
+       "3  37.124864  \n",
+       "4  36.972156  \n",
+       "\n",
+       "[5 rows x 130 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get data\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(\"datasets/NTAD_National_Bridge_Inventory_2178055625219331056.csv\")\n",
+    "\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "36256f4d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scatter -- Year built vs Condition"
+    "# Scatter -- Year built vs Condition\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -32,8 +272,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
