--- a/ConditionPlots.ipynb
+++ b/ConditionPlots.ipynb
@@ -249,17 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "589a654a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x200e0edbfb0>"
+       "<matplotlib.legend.Legend at 0x200e1d96690>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -318,8 +318,6 @@
     "ax2.set_ylabel(\"Bridges Built\", color=\"red\")\n",
     "for label in ax2.get_yticklabels():\n",
     "    label.set_color(\"red\")\n",
-    "\n",
-    "\n",
     "\n",
     "# grab labels used for legend\n",
     "lines_1, labels_1 = ax.get_legend_handles_labels()\n",
